--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com">
         <link rel="stylesheet" href="https://fonts.gstatic.com">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap">
-        <link rel="stylesheet" href="./style-rodape.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
+        <!-- Rodapé. -->
         <footer>
             <div class="background">
                 <svg 
