--- a/delivery.html
+++ b/delivery.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivery</title>
-    <style>
-        .container {
-            text-align: center;
-        }
-        .categoria {
-            margin: 20px 0;
-        }
-    </style>
+    <link 
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+    >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap">
+    <link rel="stylesheet" href="./delivery.css">     
 </head>
 <body>
     <div class="container">
-        <h3>Delivery</h3>
-        <div class="categoria sobremesa">
-            <ul>
-                <li><a href="produtos.html">Combos</a></li>
-            </ul>
-        </div>
-        <div class="categoria comida">
-            <ul>
-                <li><a href="produtos2.html">Comida</a></li>
-            </ul>
-        </div>
-        <div class="categoria bebida">
-            <ul>
-                <li><a href="produtos3.html">Bebidas</a></li>
-            </ul>
+        <div class="name"><h3> <i class="ico.ico">Delivery</i></h3></div>
+    </div>
+    <div class="categorias">
+        <div class="categoria_sobremesa">   
+            <a href="produtos.html">Sobremesas</a></div>
+        <div class="categoria_prato">
+           <a href="produtos2.html">Pratos</a></div>
+        <div class="categoria_bebida">
+            <a href="produtos3.html">Bebidas</a></div>
+    </div>
+    <div class="voltar">
+        <a href="index.html">Voltar</a>
+        <div class="imagem"><img src="imagens/ico.ico" alt="KYOTO">
         </div>
     </div>
 </body>
 </html>
+
