--- a/produtos2.html
+++ b/produtos2.html
@@ -76,7 +76,21 @@
         .imagen img {
             width: 100%;
             height: auto;
-        } 
+        }
+        .voltar{
+            position: relative;
+            top: -920px;
+            left: -665px;
+
+        }
+        .voltar a{
+            position: relative;
+            border: 2px solid;
+            border-radius: 5px;
+            padding: 10px 20px;
+            background-color: #ff1e00;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -133,6 +147,8 @@
         </div>
     </div>
         <a href="pagamento.html">Ir para Pagamento</a>
+        <div class="voltar">
+            <a href="delivery.html">Voltar</a>
     </div>
 
     <script>
