--- a/delivery.html
+++ b/delivery.html
@@ -10,9 +10,12 @@
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
-    >
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap">
-    <link rel="stylesheet" href="./delivery.css">     
+>
+<link rel="stylesheet" href="https://fonts.googleapis.com">
+<link rel="stylesheet" href="https://fonts.gstatic.com">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap">
+<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./delivery.css">     
 </head>
 <body>
     <div class="container">
@@ -31,6 +34,85 @@
         <div class="imagem"><img src="imagens/ico.ico" alt="KYOTO">
         </div>
     </div>
+    <footer>
+        <div class="background">
+            <svg 
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                width="100%"
+                height="100%"
+                viewBox="0 0 1600 900"
+            >
+                <defs>
+                    <path
+                        id="wave"
+                        fill="rgba(255, 30, 0, 0.6)"
+                        d="M-363.852,502.589c0,0,236.988-41.997,505.475,0s371.981,38.998,575.971,0s293.985-39.278,505.474,5.859s493.475,48.368,716.963-4.995v560.106H-363.852V502.589z"
+                    >
+                </defs>
+                <g>
+                    <use xlink="#wave" opacity=".4">
+                        <animateTransform
+                            attributeName="transform"
+                            attributeType="XML"
+                            type="translate"
+                            dur="8s"
+                            calcMode="spline"
+                            values="270 230; -334 180; 270 230"
+                            keyTimes="0; .5; 1"
+                            keySplines="0.42, 0, 0.58, 1.0;0.42, 0, 0.58, 1.0"
+                            repeatCount="indefinite"
+                        >
+                        </animateTransform>
+                    </use>
+                    <use xlink:href="#wave" opacity=".6">
+                        <animateTransform
+                            attributeName="transform"
+                            attributeType="XML"
+                            type="translate"
+                            dur="6s"
+                            calcMode="spline"
+                            values="-270 230;243 220;-270 230"
+                            keyTimes="0; .6; 1"
+                            keySplines="0.42, 0, 0.58, 1.0;0.42, 0, 0.58, 1.0"
+                            repeatCount="indefinite"
+                        >
+                        </animateTransform>
+                    </use>
+                    <use xlink:href="#wave" opacity=".9">
+                        <animateTransform
+                            attributeName="transform"
+                            attributeType="XML"
+                            type="translate"
+                            dur="4s"
+                            calcMode="spline"
+                            values="0 230;-140 200;0 230"
+                            keyTimes="0; .4; 1"
+                            keySplines="0.42, 0, 0.58, 1.0;0.42, 0, 0.58, 1.0"
+                            repeatCount="indefinite"
+                        >
+                        </animateTransform>
+                    </use>
+                </g>
+            </svg>
+        </div>
+        <section>
+            <ul class="redes-sociais">
+                <li><a class="fa-brands fa-instagram" href="https://www.instagram.com/" target="_blank"></a></li>
+                <li><a class="fa-brands fa-facebook" href="https://www.facebook.com/" target="_blank"></a></li>
+                <li><a class="fa-brands fa-linkedin" href="https://br.linkedin.com/" target="_blank"></a></li>
+            </ul>
+            <ul class="links">
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Responsáveis</a></li>
+                <li><a href="#">Fale Conosco</a></li>
+            </ul>
+            <p class="toque-final">© 2024 All rights reserved</p>
+        </section>
+    </footer>
 </body>
 </html>
 
