--- a/produtos.html
+++ b/produtos.html
@@ -77,11 +77,25 @@
             width: 100%;
             height: auto;
         }
+        .voltar{
+            position: relative;
+            top: -920px;
+            left: -665px;
+
+        }
+        .voltar a{
+            position: relative;
+            border: 2px solid;
+            border-radius: 5px;
+            padding: 10px 20px;
+            background-color: #ff1e00;
+            color: #fff;
+        }   
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Sobremesa</h2>
+        <h2>Sobremesas</h2>
         <div class="produtos">
             <div class="produto">
                 <div class="imagen"><img src="imagens/istockphoto-476724822-612x612.jpg" alt="Taiyaki">
@@ -133,6 +147,8 @@
             </div>
         </div>
         <a href="pagamento.html">Ir para Pagamento</a>
+        <div class="voltar">
+            <a href="delivery.html">Voltar</a>
     </div>
 
     <script>
