--- a/produtos3.html
+++ b/produtos3.html
@@ -77,6 +77,20 @@
             width: 100%;
             height: auto;
         }
+        .voltar{
+            position: relative;
+            top: -980px;
+            left: -665px;
+
+        }
+        .voltar a{
+            position: relative;
+            border: 2px solid;
+            border-radius: 5px;
+            padding: 10px 20px;
+            background-color: #ff1e00;
+            color: #fff;
+        }
         
     </style>
 </head>
@@ -134,6 +148,8 @@
         </div>
     </div>
         <a href="pagamento.html">Ir para Pagamento</a>
+        <div class="voltar">
+            <a href="delivery.html">Voltar</a>
     </div>
 
     <script>
